# casync-rs

./: Cargo.toml  README.md  WARNING
casync/: Cargo.toml
casync-format/: Cargo.toml  format.md
casync-format/src/: chunks.rs  fetcher.rs  format.rs  index.rs  lib.rs  stream.rs
casync-format/tests/: hello-world.catar  trivial.rs
casync-format/tests/data/: trivial.caidx
casync/src/: fetcher.rs  http_cache.rs  lib.rs  tools.rs
format/: Cargo.toml  format.md
format/examples/: dump.rs
format/src/: chunks.rs  format.rs  index.rs  lib.rs  stream.rs
format/tests/: trivial.rs  two.catar
format/tests/data/: nums.caidx
http/: Cargo.toml
http/src/: errors.rs  fetcher.rs  lib.rs
tool/: Cargo.toml
tool/src/: errors.rs  main.rs
