[package]
name = "casync"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
license = "MIT OR Apache-2.0"

edition = "2018"

[dependencies]
casync-format = { path = "../casync-format" }
failure = "0.1"
reqwest = "0.10"
tempfile-fast = "0.3"

[dependencies.clap]
optional = true
version = "2"

[[bin]]
name = "casync"
required-features = ["clap"]
