[package]
name = "casync"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

[dependencies]
casync-format = { path = "../casync-format" }
anyhow = "1"
reqwest = "0.13"
tempfile-fast = "0.3"

[dependencies.clap]
optional = true
version = "4"
features = ["derive"]

[[bin]]
name = "casync"
required-features = ["clap"]
